syntax = "proto3";

option csharp_namespace = "AccountIntegrationClient";

message AccountGrpcRequest
{
	string accountnumber = 1;	
}

message UpdateBalanceRequest
{
	string accountnumber = 1;
	int64 amount = 2;
}

message AccountGrpcResponse
{
	string accountnumber = 1;
	int64 amount = 2;
}

service AccountGrpcService
{
	rpc GetAccount(AccountGrpcRequest) returns (AccountGrpcResponse);
	rpc UpdateBalance(UpdateBalanceRequest) returns (AccountGrpcResponse);
}